# ruma-check

./: Cargo.toml
.github/workflows/: nightly.yml
fixtures/: mbe.rs
src/: error.rs  macro_exp.rs  main.rs  parse.rs  project.rs  rules.rs  visit.rs
src/rules/: ban_mod.rs  imports.rs  macro_fmt.rs
thing/: Cargo.toml
thing/src/: lib.rs
