[package]
name = "ruma-check"
version = "0.1.0"
authors = ["Devin Ragotzy <devin.ragotzy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntax = { git = "https://github.com/rust-analyzer/rust-analyzer.git" }
project_model = { git = "https://github.com/rust-analyzer/rust-analyzer.git" }
paths = { git = "https://github.com/rust-analyzer/rust-analyzer.git" }


thing = {path = "./thing" }

[workspace]
thing = "./thing"