[package]
name = "ruma-check"
version = "0.1.0"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Ruma specific linter"
repository = "https://github.com/DevinR528/ruma-check"
keywords = ["ruma", "linter", "lint"]
categories = ["development-tools"]
readme = "readme.md"
edition = "2018"

[dependencies]
paths = { git = "https://github.com/rust-analyzer/rust-analyzer.git" }
project_model = { git = "https://github.com/rust-analyzer/rust-analyzer.git" }
syntax = { git = "https://github.com/rust-analyzer/rust-analyzer.git" }
