[package]
name = "ruma-check"
version = "0.1.0"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Ruma specific linter"
repository = "https://github.com/DevinR528/ruma-check"
keywords = ["ruma", "linter", "lint"]
categories = ["development-tools"]
readme = "readme.md"
edition = "2018"

[dependencies]
base_db = { git = "https://github.com/rust-analyzer/rust-analyzer.git" }
hir = { git = "https://github.com/rust-analyzer/rust-analyzer.git" }
hir_def = { git = "https://github.com/rust-analyzer/rust-analyzer.git" }
hir_expand = { git = "https://github.com/rust-analyzer/rust-analyzer.git" }
hir_ty = { git = "https://github.com/rust-analyzer/rust-analyzer.git" }
ide_db = { git = "https://github.com/rust-analyzer/rust-analyzer.git" }
paths = { git = "https://github.com/rust-analyzer/rust-analyzer.git" }
project_model = { git = "https://github.com/rust-analyzer/rust-analyzer.git" }
syntax = { git = "https://github.com/rust-analyzer/rust-analyzer.git" }
rustc-hash = "1.1.0"
